fix: generate dummy data